test/files/neg/plugin-after-terminal/lib/plugins.jar.desired.sha1
cf80703ed94f5176dc099c60b32d0483322de9eb ?plugins.jar
